manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pad
  labels:
    app: etherpad
  namespace: pad
spec:
  selector:
    app: etherpad
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9001
  sessionAffinity: None
  type: ClusterIP
